mapping with relations: internal map list key fixed, immutable Lists replaced